// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconButton /> prop: selected should select the component 1`] = `
<button
  class="css-view-175oi2r r-touchAction-1otgn73 Pressable-root ButtonBase-root r-cursor-1loqt21 r-outlineWidth-10paoce r-transition-71lksq r-userSelect-lrvibr IconButton-root r-alignItems-1awozwy r-borderRadius-cpet4d r-height-eu3ka r-justifyContent-1777fci r-width-1aockid"
  role="button"
  tabindex="0"
  type="button"
>
  <div
    style="color: rgb(103, 80, 164); display: contents;"
  >
    <svg
      class="Icon-root r-flexShrink-1q142lx r-fontSize-1x35g6 r-height-1472mwg r-width-lrsllp"
      color="#6750a4"
      fill="currentColor"
      size="24"
      style="color: rgb(103, 80, 164);"
    />
  </div>
  <span
    class="ButtonBase-hover r-borderRadius-sqpuna r-bottom-1p0dtai r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-transition-sp8bj3 r-zIndex-1wyyakw"
    style="background-color: rgb(103, 80, 164); opacity: 0;"
  />
  <span
    class="ButtonBase-rippleContainer r-borderRadius-sqpuna r-bottom-1p0dtai r-left-1d2f490 r-overflow-1udh08x r-position-u8s1d r-right-zchlnj r-top-ipm5af r-zIndex-1wyyakw"
  />
</button>
`;

exports[`<IconButton /> prop: selected should unselect the component 1`] = `
<button
  class="css-view-175oi2r r-touchAction-1otgn73 Pressable-root ButtonBase-root r-cursor-1loqt21 r-outlineWidth-10paoce r-transition-71lksq r-userSelect-lrvibr IconButton-root r-alignItems-1awozwy r-borderRadius-cpet4d r-height-eu3ka r-justifyContent-1777fci r-width-1aockid"
  role="button"
  tabindex="0"
  type="button"
>
  <div
    style="color: rgb(73, 69, 79); display: contents;"
  >
    <svg
      class="Icon-root r-flexShrink-1q142lx r-fontSize-1x35g6 r-height-1472mwg r-width-lrsllp"
      color="#49454f"
      fill="currentColor"
      size="24"
      style="color: rgb(73, 69, 79);"
    />
  </div>
  <span
    class="ButtonBase-hover r-borderRadius-sqpuna r-bottom-1p0dtai r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-transition-sp8bj3 r-zIndex-1wyyakw"
    style="background-color: rgb(73, 69, 79); opacity: 0;"
  />
  <span
    class="ButtonBase-rippleContainer r-borderRadius-sqpuna r-bottom-1p0dtai r-left-1d2f490 r-overflow-1udh08x r-position-u8s1d r-right-zchlnj r-top-ipm5af r-zIndex-1wyyakw"
  />
</button>
`;

exports[`<IconButton /> should render 1`] = `
<button
  class="css-view-175oi2r r-touchAction-1otgn73 Pressable-root ButtonBase-root r-cursor-1loqt21 r-outlineWidth-10paoce r-transition-71lksq r-userSelect-lrvibr IconButton-root r-alignItems-1awozwy r-borderRadius-cpet4d r-height-eu3ka r-justifyContent-1777fci r-width-1aockid"
  role="button"
  tabindex="0"
  type="button"
>
  <div
    style="color: rgb(73, 69, 79); display: contents;"
  >
    <svg
      class="Icon-root r-flexShrink-1q142lx r-fontSize-1x35g6 r-height-1472mwg r-width-lrsllp"
      color="#49454f"
      data-testid="icon"
      fill="currentColor"
      size="24"
      style="color: rgb(73, 69, 79);"
    />
  </div>
  <span
    class="ButtonBase-hover r-borderRadius-sqpuna r-bottom-1p0dtai r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-transition-sp8bj3 r-zIndex-1wyyakw"
    style="background-color: rgb(73, 69, 79); opacity: 0;"
  />
  <span
    class="ButtonBase-rippleContainer r-borderRadius-sqpuna r-bottom-1p0dtai r-left-1d2f490 r-overflow-1udh08x r-position-u8s1d r-right-zchlnj r-top-ipm5af r-zIndex-1wyyakw"
  />
</button>
`;
